# geomtosmarts

./: LICENSE  README.md  pyproject.toml
examples/: diels_alder.out  ma_nitro.out  three_two.out
src/: example.py  geomtosmarts.py
src/geomtosmarts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
