[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geomtosmarts"
version = "0.0.1"
authors = [{name = "Samuel George Espley"}]
description = "Package to turn an optimised Gaussian transition structure into a reaction SMILES/SMARTS."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12.3",
    "License :: MIT License",
    "Operating System :: OS Independent",
    ]

dependencies = [
    "cclib==1.8.1",
    "numpy==1.26.4",
    "xyz-py==5.11.0 ",
    "rdkit==2024.03.2",
    "molml==0.9.0 "
    ]